engine/tests/detection_corpus/bad/sqli_js_template.js
function getOrders(uid) {
  return db.query(`SELECT * FROM orders WHERE user_id = ${uid}`);
}
